Fixed rendering admin on public, layout issues 🏢🏢👍

--- a/pages/admin/styles.css
+++ b/pages/admin/styles.css
@@ -47,3 +47,10 @@
    height: 400px;
    padding: 5px;
 }
+
+.metricText {
+  display: flex;
+  align-content: center;
+  height: 100%;
+  justify-content: center;
+}
